unpackaged/main/default/objects/Inventario__c/Inventario__c.object-meta.xml
<CustomObject>
    <label>Proceso ATC</label>
    <nameField>
        <label>Id Vivienda</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProcesosATC</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>