unpackaged/main/default/objects/Inventario__c/fields/Antiguedad__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad__c</fullName>
    <formula>(YEAR( TODAY())*12+MONTH(TODAY())) - (YEAR(FechaEntrega__c)*12+MONTH(FechaEntrega__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Antigüedad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>