unpackaged/main/default/objects/Inventario__c/fields/Asesor_de_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Asesor_de_Cobranza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asesor de Cobranza</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProcesosATC</relationshipName>
    <type>Lookup</type>
</CustomField>