unpackaged/main/default/objects/Inventario__c/fields/BotonCheck__c.field-meta.xml
<CustomField>
    <fullName>BotonCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BotonCheck</label>
    <type>Checkbox</type>
</CustomField>