unpackaged/main/default/objects/Inventario__c/fields/Campana_RAC__c.field-meta.xml
<CustomField>
    <fullName>Campana_RAC__c</fullName>
    <label>Campaña RAC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>