unpackaged/main/default/objects/Inventario__c/fields/Condominio__c.field-meta.xml
<CustomField>
    <fullName>Condominio__c</fullName>
    <label>Condominio</label>
    <type>TextArea</type>
</CustomField>