unpackaged/main/default/objects/Inventario__c/fields/Conjunto__c.field-meta.xml
<CustomField>
    <fullName>Conjunto__c</fullName>
    <label>Conjunto</label>
    <type>TextArea</type>
</CustomField>