unpackaged/main/default/objects/Inventario__c/fields/ConteoCitasEntrega__c.field-meta.xml
<CustomField>
    <fullName>ConteoCitasEntrega__c</fullName>
    <label>Conteo Citas de Entrega</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>