unpackaged/main/default/objects/Inventario__c/fields/ConteoVisitasCasos__c.field-meta.xml
<CustomField>
    <fullName>ConteoVisitasCasos__c</fullName>
    <label>Conteo Visitas de Casos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>