unpackaged/main/default/objects/Inventario__c/fields/Correo_Electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico__c</fullName>
    <formula>Cuenta__r.CorreoElectronico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo Electrónico</label>
    <type>Text</type>
</CustomField>