unpackaged/main/default/objects/Inventario__c/fields/Cumplimiento__c.field-meta.xml
<CustomField>
    <fullName>Cumplimiento__c</fullName>
    <formula>IF( ISPICKVAL( Entregada__c , &quot;Entregado&quot;) , IF( FechaEntrega__c - FechaEscritura__c  &lt;= 30, &quot;Verde&quot;,  IF(FechaEntrega__c - FechaEscritura__c   &gt;= 31  &amp;&amp; FechaEntrega__c - FechaEscritura__c  &lt;= 60, &quot;Amarillo&quot;,  IF(FechaEntrega__c - FechaEscritura__c    &gt;= 61, &quot;Rojo&quot;, null) ) )
,IF( TODAY() - FechaEscritura__c  &lt;= 30, &quot;Verde&quot;,  IF(TODAY() - FechaEscritura__c   &gt;= 31  &amp;&amp; TODAY() - FechaEscritura__c  &lt;= 60, &quot;Amarillo&quot;,  IF(TODAY() - FechaEscritura__c    &gt;= 61, &quot;Rojo&quot;, null) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 -30 Verde
31 - 60 Amarillo
+61 Rojo</inlineHelpText>
    <label>Cumplimiento</label>
    <type>Text</type>
</CustomField>