unpackaged/main/default/objects/Inventario__c/fields/Detalles_de_Resultado__c.field-meta.xml
<CustomField>
    <fullName>Detalles_de_Resultado__c</fullName>
    <label>Detalles de Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Resultado_de_Gestion__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pago No Aplicado</fullName>
            </value>
            <value>
                <fullName>Solicita Carta Finiquito</fullName>
            </value>
            <value>
                <fullName>Recomienda y Gana</fullName>
            </value>
            <value>
                <fullName>Gestion Retenida a Solicitud de Corporativo</fullName>
            </value>
            <value>
                <fullName>Fallecimiento de Titular</fullName>
            </value>
            <value>
                <fullName>Asesor no informa del financiamiento a cliente</fullName>
            </value>
            <value>
                <fullName>Asesor no proporciona cuentas y referencias de pago</fullName>
            </value>
            <value>
                <fullName>Asesor se comprometió a pagar adeudo financiado con cliente</fullName>
            </value>
            <value>
                <fullName>Asesor argumenta al cliente que no pague adeudo</fullName>
            </value>
            <value>
                <fullName>Asesor no respeta fechas de vencimiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>