unpackaged/main/default/objects/Inventario__c/fields/DiasAntiguedad__c.field-meta.xml
<CustomField>
    <fullName>DiasAntiguedad__c</fullName>
    <formula>IF( ISPICKVAL( Entregada__c , &quot;Entregado&quot;) ,  FechaEntrega__c - FechaEscritura__c, TODAY()- FechaEscritura__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Entregado: días transcurridos desde la fecha de escritura hasta la fecha de entrega
Por entregar: días transcurridos desde fecha de escritura a HOY</inlineHelpText>
    <label>Días de antigüedad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>