unpackaged/main/default/objects/Inventario__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <formula>Direccionoficial__c+&quot; &quot;+ Interior__c</formula>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>