unpackaged/main/default/objects/Inventario__c/fields/Direccionoficial__c.field-meta.xml
<CustomField>
    <fullName>Direccionoficial__c</fullName>
    <label>Dirección oficial</label>
    <type>TextArea</type>
</CustomField>