unpackaged/main/default/objects/Inventario__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Se llena con el valor del email de la cuenta asignada al ProcesoATC</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>