unpackaged/main/default/objects/Inventario__c/fields/Email_de_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Email_de_Asesor__c</fullName>
    <formula>Asesor_de_Cobranza__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email de Asesor</label>
    <type>Text</type>
</CustomField>