unpackaged/main/default/objects/Inventario__c/fields/Encuesta_1__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_1__c</fullName>
    <label>Encuesta_1</label>
    <type>Url</type>
</CustomField>