unpackaged/main/default/objects/Inventario__c/fields/Encuesta_2__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_2__c</fullName>
    <label>Encuesta_2</label>
    <type>Url</type>
</CustomField>