unpackaged/main/default/objects/Inventario__c/fields/Encuesta_3__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_3__c</fullName>
    <label>Encuesta_3</label>
    <type>Url</type>
</CustomField>