unpackaged/main/default/objects/Inventario__c/fields/Entregada__c.field-meta.xml
<CustomField>
    <fullName>Entregada__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Por Entregar</fullName>
            </value>
            <value>
                <fullName>No Entregado</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>Agendada</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>