unpackaged/main/default/objects/Inventario__c/fields/EnviarSibel__c.field-meta.xml
<CustomField>
    <fullName>EnviarSibel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a Sibel</label>
    <type>Checkbox</type>
</CustomField>