unpackaged/main/default/objects/Inventario__c/fields/Exigible_para_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Exigible_para_Cobro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exigible para Cobro</label>
    <type>Checkbox</type>
</CustomField>