unpackaged/main/default/objects/Inventario__c/fields/Fecha_de_Asignacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Asignacion__c</fullName>
    <label>Fecha de Asignación</label>
    <type>Date</type>
</CustomField>