unpackaged/main/default/objects/Inventario__c/fields/Fecha_Exigible_para_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Exigible_para_Cobro__c</fullName>
    <label>Fecha Exigible para Cobro</label>
    <type>Date</type>
</CustomField>