unpackaged/main/default/objects/Inventario__c/fields/FechaActas__c.field-meta.xml
<CustomField>
    <fullName>FechaActas__c</fullName>
    <label>Fecha de Actas</label>
    <type>Date</type>
</CustomField>