unpackaged/main/default/objects/Inventario__c/fields/FechadeHabitabilidad__c.field-meta.xml
<CustomField>
    <fullName>FechadeHabitabilidad__c</fullName>
    <label>Fecha de Habitabilidad</label>
    <type>Date</type>
</CustomField>