unpackaged/main/default/objects/Inventario__c/fields/FechaDTU_DTI__c.field-meta.xml
<CustomField>
    <fullName>FechaDTU_DTI__c</fullName>
    <label>Fecha DTU o DTI</label>
    <type>TextArea</type>
</CustomField>