unpackaged/main/default/objects/Inventario__c/fields/FechaDTUDTI__c.field-meta.xml
<CustomField>
    <fullName>FechaDTUDTI__c</fullName>
    <label>Fecha DTU o DTI</label>
    <type>Date</type>
</CustomField>