unpackaged/main/default/objects/Inventario__c/fields/FechaEntregaEsperada__c.field-meta.xml
<CustomField>
    <fullName>FechaEntregaEsperada__c</fullName>
    <label>Fecha de entrega esperada</label>
    <type>Date</type>
</CustomField>