unpackaged/main/default/objects/Inventario__c/fields/FechaEscritura__c.field-meta.xml
<CustomField>
    <fullName>FechaEscritura__c</fullName>
    <label>Fecha de Escritura</label>
    <type>Date</type>
</CustomField>