unpackaged/main/default/objects/Inventario__c/fields/FechaEsperadaEntrega__c.field-meta.xml
<CustomField>
    <fullName>FechaEsperadaEntrega__c</fullName>
    <formula>FechaEscritura__c  + 30</formula>
    <label>Fecha Esperada de Entrega</label>
    <type>Date</type>
</CustomField>