unpackaged/main/default/objects/Inventario__c/fields/FechaExigible__c.field-meta.xml
<CustomField>
    <fullName>FechaExigible__c</fullName>
    <label>Fecha Cobro</label>
    <type>Date</type>
</CustomField>