unpackaged/main/default/objects/Inventario__c/fields/FechaHabitabilidad__c.field-meta.xml
<CustomField>
    <fullName>FechaHabitabilidad__c</fullName>
    <label>Fecha Habitabilidad</label>
    <type>TextArea</type>
</CustomField>