unpackaged/main/default/objects/Inventario__c/fields/Fracc__c.field-meta.xml
<CustomField>
    <fullName>Fracc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 OR 5 OR 2 OR 4) AND 3</booleanFilter>
        <filterItems>
            <field>$User.Fraccionamiento_autorizado__c</field>
            <operation>contains</operation>
            <valueField>Fraccionamiento__c.Name</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Administrador del sistema</value>
        </filterItems>
        <filterItems>
            <field>Fraccionamiento__c.Activo_frac__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Fraccionamiento_autorizado__c</field>
            <operation>equals</operation>
            <value>TODOS</value>
        </filterItems>
        <filterItems>
            <field>$User.Fraccionamiento_autorizado__c</field>
            <operation>contains</operation>
            <valueField>Fraccionamiento__c.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>ProcesosATC</relationshipLabel>
    <relationshipName>Inventarios</relationshipName>
    <type>Lookup</type>
</CustomField>