unpackaged/main/default/objects/Inventario__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <label>Fraccionamiento</label>
    <type>TextArea</type>
</CustomField>