unpackaged/main/default/objects/Inventario__c/fields/Frente__c.field-meta.xml
<CustomField>
    <fullName>Frente__c</fullName>
    <label>Frente</label>
    <type>TextArea</type>
</CustomField>