unpackaged/main/default/objects/Inventario__c/fields/IdFlow__c.field-meta.xml
<CustomField>
    <fullName>IdFlow__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IdFlow</label>
    <type>Text</type>
</CustomField>