unpackaged/main/default/objects/Inventario__c/fields/Interior__c.field-meta.xml
<CustomField>
    <fullName>Interior__c</fullName>
    <label>Interior</label>
    <length>25</length>
    <type>Text</type>
</CustomField>