unpackaged/main/default/objects/Inventario__c/fields/IsEntrega__c.field-meta.xml
<CustomField>
    <fullName>IsEntrega__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEntrega</label>
    <type>Checkbox</type>
</CustomField>