unpackaged/main/default/objects/Inventario__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <label>Lote</label>
    <type>TextArea</type>
</CustomField>