unpackaged/main/default/objects/Inventario__c/fields/Manzana__c.field-meta.xml
<CustomField>
    <fullName>Manzana__c</fullName>
    <label>Manzana</label>
    <type>TextArea</type>
</CustomField>