unpackaged/main/default/objects/Inventario__c/fields/Medio_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_Contacto__c</fullName>
    <inlineHelpText>Medio de contacto utilizado para llegar a una resolución</inlineHelpText>
    <label>Medio de Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Llamada</fullName>
            </value>
            <value>
                <fullName>Visita</fullName>
            </value>
            <value>
                <fullName>Mensaje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>