unpackaged/main/default/objects/Inventario__c/fields/Mensualidad_Aproximada__c.field-meta.xml
<CustomField>
    <fullName>Mensualidad_Aproximada__c</fullName>
    <label>Mensualidad Aproximada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>