unpackaged/main/default/objects/Inventario__c/fields/MLI__c.field-meta.xml
<CustomField>
    <fullName>MLI__c</fullName>
    <label>MLI</label>
    <type>TextArea</type>
</CustomField>