unpackaged/main/default/objects/Inventario__c/fields/MLIU__c.field-meta.xml
<CustomField>
    <fullName>MLIU__c</fullName>
    <formula>MLI__c</formula>
    <label>MLI</label>
    <type>Text</type>
</CustomField>