unpackaged/main/default/objects/Inventario__c/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <label>Módulo</label>
    <type>TextArea</type>
</CustomField>