unpackaged/main/default/objects/Inventario__c/fields/Monto_de_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_Financiamiento__c</fullName>
    <label>Monto de Financiamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>