unpackaged/main/default/objects/Inventario__c/fields/MunicipioFor__c.field-meta.xml
<CustomField>
    <fullName>MunicipioFor__c</fullName>
    <formula>MunicipioFraccionamiento__c</formula>
    <label>Municipio</label>
    <type>Text</type>
</CustomField>