unpackaged/main/default/objects/Inventario__c/fields/MunicipioFraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>MunicipioFraccionamiento__c</fullName>
    <label>Municipio de fraccionamiento</label>
    <type>TextArea</type>
</CustomField>