unpackaged/main/default/objects/Inventario__c/fields/MunicipioTexto__c.field-meta.xml
<CustomField>
    <fullName>MunicipioTexto__c</fullName>
    <label>Municipio de texto</label>
    <type>TextArea</type>
</CustomField>