unpackaged/main/default/objects/Inventario__c/fields/Nombre_de_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Asesor__c</fullName>
    <formula>Asesor_de_Cobranza__r.Title +  &quot; &quot; + Asesor_de_Cobranza__r.FirstName +  &quot; &quot; + Asesor_de_Cobranza__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Asesor</label>
    <type>Text</type>
</CustomField>