unpackaged/main/default/objects/Inventario__c/fields/NombreAsesor__c.field-meta.xml
<CustomField>
    <fullName>NombreAsesor__c</fullName>
    <label>Nombre de Asesor</label>
    <type>TextArea</type>
</CustomField>