unpackaged/main/default/objects/Inventario__c/fields/Notaria__c.field-meta.xml
<CustomField>
    <fullName>Notaria__c</fullName>
    <label>Notaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>