unpackaged/main/default/objects/Inventario__c/fields/Notario__c.field-meta.xml
<CustomField>
    <fullName>Notario__c</fullName>
    <label>Notario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>