unpackaged/main/default/objects/Inventario__c/fields/NumeroInterior__c.field-meta.xml
<CustomField>
    <fullName>NumeroInterior__c</fullName>
    <label>Número Interno</label>
    <type>TextArea</type>
</CustomField>