unpackaged/main/default/objects/Inventario__c/fields/NumeroProceso__c.field-meta.xml
<CustomField>
    <fullName>NumeroProceso__c</fullName>
    <label>Número de proceso</label>
    <length>25</length>
    <type>Text</type>
</CustomField>