unpackaged/main/default/objects/Inventario__c/fields/Plantas__c.field-meta.xml
<CustomField>
    <fullName>Plantas__c</fullName>
    <formula>Proto__r.Plantas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plantas</label>
    <type>Text</type>
</CustomField>