unpackaged/main/default/objects/Inventario__c/fields/Plaza__c.field-meta.xml
<CustomField>
    <fullName>Plaza__c</fullName>
    <label>Plaza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>