unpackaged/main/default/objects/Inventario__c/fields/Plazos_Pendientes__c.field-meta.xml
<CustomField>
    <fullName>Plazos_Pendientes__c</fullName>
    <label>Plazos Pendientes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>