unpackaged/main/default/objects/Inventario__c/fields/Plazos_Transcurridos__c.field-meta.xml
<CustomField>
    <fullName>Plazos_Transcurridos__c</fullName>
    <label>Plazos Transcurridos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>