unpackaged/main/default/objects/Inventario__c/fields/PorcentajeCheckList__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeCheckList__c</fullName>
    <label>Porcentaje Check List</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>