unpackaged/main/default/objects/Inventario__c/fields/ProductoFinanciero__c.field-meta.xml
<CustomField>
    <fullName>ProductoFinanciero__c</fullName>
    <label>Producto Financiero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>