unpackaged/main/default/objects/Inventario__c/fields/Proto__c.field-meta.xml
<CustomField>
    <fullName>Proto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prototipo</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Prototipo__c.Fraccionamiento__c</field>
            <operation>equals</operation>
            <valueField>$Source.Fracc__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Prototipo__c</referenceTo>
    <relationshipLabel>ProcesosATC</relationshipLabel>
    <relationshipName>Inventarios</relationshipName>
    <type>Lookup</type>
</CustomField>