unpackaged/main/default/objects/Inventario__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <label>Prototipo</label>
    <type>TextArea</type>
</CustomField>