unpackaged/main/default/objects/Inventario__c/fields/Referencia_Bancaria_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Bancaria_Cliente__c</fullName>
    <formula>Cuenta__r.ReferenciaBancariaCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referencia Bancaria de Cliente</label>
    <type>Text</type>
</CustomField>