unpackaged/main/default/objects/Inventario__c/fields/Referencia_HSBC__c.field-meta.xml
<CustomField>
    <fullName>Referencia_HSBC__c</fullName>
    <formula>CASE( Compania__c , 
&#39;CASAS JAVER S.A. DE C.V.&#39;, &#39;4062753744&#39;, 
&#39;CASAS JAVER DE MÉXICO, S.A. DE C.V&#39;, &#39;4062753579&#39;, 
&#39;CASAS JAVER DE QUERÉTARO S.A. DE C.V.&#39;, &#39;4062754445&#39;, 
&#39;INMUEBLES PARA TI SA DE CV&#39;, &#39;4062753793&#39;, 
&#39;SERVICIOS CORPORATIVOS JAVER SAB DE CV&#39;, &#39;4062752381&#39;,
					&#39;&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referencia HSBC</label>
    <type>Text</type>
</CustomField>