unpackaged/main/default/objects/Inventario__c/fields/ReferenciaBancariaCliente__c.field-meta.xml
<CustomField>
    <fullName>ReferenciaBancariaCliente__c</fullName>
    <label>Referencia Bancaria del cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>