unpackaged/main/default/objects/Inventario__c/fields/Resultado_de_Gestion__c.field-meta.xml
<CustomField>
    <fullName>Resultado_de_Gestion__c</fullName>
    <label>Resultado de Gestion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promesa</fullName>
            </value>
            <value>
                <fullName>Negativa</fullName>
            </value>
            <value>
                <fullName>Aclaración</fullName>
            </value>
            <value>
                <fullName>Sin Resultado</fullName>
            </value>
            <value>
                <fullName>Al Corriente</fullName>
            </value>
            <value>
                <fullName>Contingencia COVID19</fullName>
            </value>
            <value>
                <fullName>Garantías/Desperfectos</fullName>
            </value>
            <value>
                <fullName>Datos de Contacto Invalido</fullName>
            </value>
            <value>
                <fullName>Teléfono a Buzón</fullName>
            </value>
            <value>
                <fullName>Asesor Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>