unpackaged/main/default/objects/Inventario__c/fields/Revisiones_en_Viviendo_SYS__c.field-meta.xml
<CustomField>
    <fullName>Revisiones_en_Viviendo_SYS__c</fullName>
    <label>Checklist Sistema</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>