unpackaged/main/default/objects/Inventario__c/fields/Saldo_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Pendiente__c</fullName>
    <description>Saldo pendiente de pago (no necesariamente vencido)</description>
    <inlineHelpText>Saldo pendiente de pago (no necesariamente vencido)</inlineHelpText>
    <label>Saldo Pendiente</label>
    <summarizedField>Pagare_Ant__c.Saldo__c</summarizedField>
    <summaryForeignKey>Pagare_Ant__c.Proceso_ATC__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>