unpackaged/main/default/objects/Inventario__c/fields/Saldo_Vencido_Pagares__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Vencido_Pagares__c</fullName>
    <label>Saldo Vencido (Pagares)</label>
    <summarizedField>Pagare_Ant__c.SaldoVencido__c</summarizedField>
    <summaryFilterItems>
        <field>Pagare_Ant__c.SaldoVencido__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Pagare_Ant__c.Proceso_ATC__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>