unpackaged/main/default/objects/Inventario__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>TextArea</type>
</CustomField>