unpackaged/main/default/objects/Inventario__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <label>Supervisor</label>
    <type>TextArea</type>
</CustomField>