unpackaged/main/default/objects/Inventario__c/fields/SupervisorObra__c.field-meta.xml
<CustomField>
    <fullName>SupervisorObra__c</fullName>
    <label>Supervisor de obra</label>
    <type>TextArea</type>
</CustomField>