unpackaged/main/default/objects/Inventario__c/fields/Telefono_de_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Telefono_de_Asesor__c</fullName>
    <formula>Asesor_de_Cobranza__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefono de Asesor</label>
    <type>Text</type>
</CustomField>