unpackaged/main/default/objects/Inventario__c/fields/Telefono_de_Notaria__c.field-meta.xml
<CustomField>
    <fullName>Telefono_de_Notaria__c</fullName>
    <label>Teléfono de Notaria</label>
    <type>Phone</type>
</CustomField>