unpackaged/main/default/objects/Inventario__c/fields/Tiempo_de_Asignacion__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_de_Asignacion__c</fullName>
    <formula>Today()-Fecha_de_Asignacion__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo de Asignación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>