unpackaged/main/default/objects/Inventario__c/fields/Tipo_de_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Vivienda__c</fullName>
    <formula>TEXT(Fracc__r.Tipode_vivienda__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Vivienda</label>
    <type>Text</type>
</CustomField>