unpackaged/main/default/objects/Inventario__c/fields/TipoCredito__c.field-meta.xml
<CustomField>
    <fullName>TipoCredito__c</fullName>
    <label>Tipo de crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BANCO - SOFOL</fullName>
            </value>
            <value>
                <fullName>BANJERCITO</fullName>
            </value>
            <value>
                <fullName>CAJA FLORENCIO ROSAS</fullName>
            </value>
            <value>
                <fullName>CONTADO</fullName>
            </value>
            <value>
                <fullName>CONTINGENCIA</fullName>
            </value>
            <value>
                <fullName>FOVISSSTE</fullName>
            </value>
            <value>
                <fullName>INFONAVIT</fullName>
            </value>
            <value>
                <fullName>ISSFAM</fullName>
            </value>
            <value>
                <fullName>ISSSTELEON</fullName>
            </value>
            <value>
                <fullName>SHF/BANCO</fullName>
            </value>
            <value>
                <fullName>PENSIONES</fullName>
            </value>
            <value>
                <fullName>COFINAVIT</fullName>
            </value>
            <value>
                <fullName>BANSEFI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>