unpackaged/main/default/objects/Inventario__c/fields/TipoRegistroCheckList__c.field-meta.xml
<CustomField>
    <fullName>TipoRegistroCheckList__c</fullName>
    <formula>IF(Proto__r.Plantas__c= &quot;1&quot;,&quot;012q00000009S3o&quot;,  IF(Proto__r.Plantas__c= &quot;2&quot;,&quot;012q00000009S3t&quot;,   IF(Proto__r.Plantas__c= &quot;3&quot;, &quot;012q00000009S3y&quot;, Null) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TipoRegistroCheckList</label>
    <type>Text</type>
</CustomField>