unpackaged/main/default/objects/Inventario__c/fields/UEN__c.field-meta.xml
<CustomField>
    <fullName>UEN__c</fullName>
    <formula>Fracc__r.UEN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UEN</label>
    <type>Text</type>
</CustomField>