unpackaged/main/default/objects/Inventario__c/fields/Unidad_privativa__c.field-meta.xml
<CustomField>
    <fullName>Unidad_privativa__c</fullName>
    <label>Unidad privativa</label>
    <type>TextArea</type>
</CustomField>